tests/error/template_inexistant.gw
// [contains] template call of non-existant function
 test<{int}>();
